src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 10vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.homepage-logo {
  height: 10vh;
}

.navbar {
  background-color: pink;
}

.newShift-component {
  background-color: pink;
}

.section-4-col {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  background-color: yellow;
}

.section-2-col {
  display: grid;
  grid-template-columns: 1fr 1fr;
  background-color: yellow;
}

.accordian-toggle_button {
  width: 100%;
}

.card-shift, .card-client, .card-employee {
  display: grid;
  grid-template-columns: 1fr 2fr;
}

.card-shift, .card-employee {
  background-color: lightblue;
}

.card-client {

}

